<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".user.UserHomeActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBookSlot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_500"
                android:text="@string/book_slot"
                android:textColor="@color/white"
                android:onClick="bookSlot"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UsingOnClickInXml" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnViewBooking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/purple_500"
                android:text="@string/view_bookings"
                android:textColor="@color/white"
                android:onClick="viewUserBooking"
                app:layout_constraintTop_toBottomOf="@+id/btnBookSlot"
                tools:ignore="UsingOnClickInXml" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMyWallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="myWallet"
                android:background="@color/purple_500"
                android:text="@string/my_wallet"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/btnViewBooking"
                tools:ignore="UsingOnClickInXml" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>